@@ -9,10 +9,10 @@ Package: ide50
 Architecture: any
 Depends: apache2
 Recommends: whois, gdbserver, manpages-dev, clang-3.6, nodejs, lib50-c (>= 7.1.1),
-  lib50-python (>= 1.1.1), lib50-java (>= 1.1.1), library50-php, check50,
+  lib50-python (>= 1.2.1), lib50-java (>= 1.1.1), library50-php, check50,
   help50 (>= 1.2.2), server50 (>= 1.0.0), submit50 (>= 1.1.0), style50,
-  php5-cgi, telnet, php5-curl, ngrok-client,
-  render50, wamerican, bc, dos2unix, libphp-phpmailer, php5-xdebug,
+  phpliteadmin (>= 1.0.0), php5-sqlite, sqlite3, php5-cgi, telnet, php5-curl,
+  ngrok-client, render50, wamerican, bc, dos2unix, libphp-phpmailer, php5-xdebug,
   inotify-tools, dnsutils, traceroute, openjdk-7-jdk, python3-pip, python3-tk
 Provides:
 Replaces:
